                * Geolocation :
                    - The SettingKey names 'NEIGHBOURHOOD_DISTANCE' & 'GOOGLE_API_KEY' have been removed.
                * Mobile :
                    - In 'setting_keys', the alias 'LOCATION_MAP_URL' has been removed.
                * Projects :
                    - The method 'models.AbstractProjectTask.clone_scope()' has been removed.


== Version 2.7 ==

  UPGRADE NOTES :
    - If you upgrade your MariaDB server to 10.7+, you have to convert all the UUID fields
      (which were just CharFields before MariaDB 10.7) to real UUID fields
      See "creme/creme_core/migrations/migrate_uuid.sql" ; copy it & remove the
      lines related to app which are not installed) before importing it.

  Users side :
  ------------
    # The minimal version of Python is now '3.10'.
    # The version of Django has been upgraded to '5.2' ; for users it means that :
        - Python '3.13' is officially supported.
        - The minimal version of SQLite is now '3.31'.
        - The minimal version of MySQL is now '8.0.11'.
        - The minimal version of PostgreSQL is now '14'.
        - The minimal version of MariaDB is now '10.5' ;
          the UUID fields may have to be manually converted if you use MariaDB 10.7+ (see the upgrade notes above).
        - The URL fields assume "https" by default ; set the setting 'FORMS_URLFIELD_ASSUME_HTTPS' if you prefer "http"
          (this setting will be removed with Django 6.0 -- & so Creme 2.9 or something like that).
    # A warning is now displayed if the settings 'SITE_DOMAIN' is not correctly defined.
    # A new mandatory app has been added: "Custom entities".
      It allows users to create their own types of entity without coding.
        - You can create up to 20 types.
        - The new types have just one regular field ("name"), you can add custom-field as usual.
        - BEWARE: if you upgrade from a previous version of Creme, 'creme.custom_entities' must be